--- a/src/main/resources/static/styles/sstyle.css
+++ b/src/main/resources/static/styles/sstyle.css
@@ -1,5 +1,5 @@
 .zull{
-    background-image: url("../img/faze.png");
+    background-image: url("../img_src/faze.png");
     background-repeat: no-repeat;
     height: 163px;
     margin-top: 10px;
