--- a/src/main/resources/static/styles/main_style.css
+++ b/src/main/resources/static/styles/main_style.css
@@ -1,19 +1,27 @@
 /* Main color code : #66c7ce*/
+/* Is Paid bg color : #80ff80*/
+.body {
+    margin-left: -15px;
+    padding-left: 0px;
+}
 
-.heading{
+.heading {
     background-image: url("../img_src/faze.png");
     background-repeat: no-repeat;
     height: 163px;
-    margin-top: 15px;
+    margin-top: 14px;
     background-position: center;
     position: relative;
 }
 
-nav ul {
-    padding: 10px;
+.controlls {
+    /*padding: 10px;*/
     font-size: large;
     text-align: center;
-    margin-top: 20px;
+    /*width: 100%;*/
+    margin-top: -25px;
+    margin-bottom: 8px;
+    padding-bottom: 0px;
     list-style-type: none;
     border-top: 3px double black;
     border-bottom: 1px solid #dbdbd9;
@@ -21,12 +29,11 @@ nav ul {
     color: white;
 }
 
-nav li {
-    display: inline-block;
+.controlls input {
     margin-right: 15px;
 }
 
-nav li a {
+.controlls input a {
     text-decoration: none;
     padding: 10px;
     font-size: 15px;
@@ -35,7 +42,7 @@ nav li a {
     margin: 0;
 }
 
-nav li a:hover {
+.controlls input a:hover {
     background-color: darkcyan;
     border: 1px solid black;
     text-transform: uppercase;
@@ -44,70 +51,71 @@ nav li a:hover {
     border-radius: 15%;
 }
 
-.input_form{
-    border: 1px #66c7ce solid;
-    width: 1200px;
-    /*text-align: center;*/
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 5px;
-    /*vertical-align: center;*/
+.error_output span {
+    margin-top: 10px;
 }
 
-/*#navbar {*/
-/*    overflow: hidden;*/
-/*    background-color: #333;*/
-/*}*/
+.error_output ul {
+    list-style-type: circle;
+}
 
-.input_form textarea{
-    width: 100px;
+.input_form {
+    border: 1px #66c7ce solid;
+    margin-top: -10px;
+    background-color: #a6a6a6;
+    padding: 5px;
+    position: relative;
+}
+
+.input_form input {
+    padding: 5px;
+    margin: 7px;
+}
+
+.input_form textarea {
+    width: 500px;
     height: 30px;
 }
+
 .error_output {
     color: darkred;
+    border: 1px solid green;
 }
 
 .sticky {
     position: fixed;
-    top: 0;
+    top: 10px;
     width: 100%;
-}
-
-.sticky + .content {
-    padding-top: 60px;
 }
 
 .name_filter {
     position: relative;
-    bottom: 83px;
-    left: 15px
+    top: 27px;
+    left: 15px;
 }
-.category_filter{
+
+.category_filter {
     display: block;
     position: relative;
-    bottom: 70px;
-    left: 15px
+    top: 29px;
+    left: 15px;
 }
 
-.output_table table,tr{
-    width: 70%;
-    /*box-sizing: border-box;*/
-    /*v-align: center;*/
-    /*border-spacing: 15px;*/
-    /*padding: 10px;*/
+.filters {
+    position: relative;
+    padding: 50px;
+    top: 25px;
+}
+
+.output_table table, tr {
+    width: 100%;
     border-collapse: collapse;
-    /*padding: 30px;*/
-
-    /* Makes all borders as one*/
-    /*border-collapse: collapse;*/
-
+    border-top: 1px solid #31708f;
 }
 
-.output_table tr {
-    margin-top: 100px;
-    /*border-spacing: 15px;*/
-
+.output_table td {
+    padding: 3px 5px 3px 5px;
+    text-align: left;
 }
 
 .output_table tr:nth-child(even) {
@@ -124,30 +132,32 @@ nav li a:hover {
     text-decoration: none;
     border: 2px solid darkcyan;
     border-radius: 5px;
-}
+    }
+
 .button:hover {
     text-transform: uppercase;
 }
 
-.delete_button{
-    padding-left: 10px;
-    margin-left: 15px;
+.delete_button {
+    /*padding-left: 10px;*/
+    /*margin-left: 15px;*/
 }
 
-.edit_button{
-    padding-left: 10px;
-    margin-left: 15px;
+.edit_button {
+    /*padding-left: 10px;*/
+    /*margin-left: 15px;*/
 
 
 }
 
 .hard_buttons {
-    /*position: relative;*/
-    /*display: inline-block;*/
-    /*right: 30px;*/
-    /*padding: 10px*/
-    /*left: 100px*/
-    /*valign: right;*/
+    width: 50px;
+    right: 0px;
+}
+
+.hard_buttons input {
+    width: 50px;
+    right: 0;
 }
 
 
@@ -155,7 +165,7 @@ nav li a:hover {
     /*margin-top: 20px;*/
 }
 
-.custom_button{
+.custom_button {
     height: 36px;
     width: 100px;
     /*background: lightseagreen;*/
@@ -166,8 +176,9 @@ nav li a:hover {
     color: #fff;
     box-shadow: 0 0 1px #ccc;
     -webkit-transition-duration: 0.5s;
-    -webkit-box-shadow: 0px 0px 0 0 #31708f inset , 0px 0px 0 0 #31708f inset;
+    -webkit-box-shadow: 0px 0px 0 0 #31708f inset, 0px 0px 0 0 #31708f inset;
 }
-.custom_button:hover{
-    -webkit-box-shadow: 50px 0px 0 0 #31708f inset , -50px 0px 0 0 #31708f inset;
+
+.custom_button:hover {
+    -webkit-box-shadow: 50px 0px 0 0 #31708f inset, -50px 0px 0 0 #31708f inset;
 }
