Added thymeleaf and corrected imports

--- a/src/main/resources/templates/export.html
+++ b/src/main/resources/templates/export.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Export page</title>
     <!--  Custom style  -->
-    <link rel="stylesheet" href="./styles/main_style.css"/>
+    <link rel="stylesheet" href="styles/main_style.css"/>
 </head>
 <body>
 <header class="zull"></header>
