--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,14 +6,14 @@
     <!-- Vue + Vue resource -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue-resource@1.5.1"></script>
-    <link rel="stylesheet" href="./styles/main_style.css"/>
-    <link rel="icon" href="favicon/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="/styles/main_style.css"/>
+    <link rel="icon" href="/favicon/favicon.ico" type="image/x-icon" />
 </head>
 <body>
 <header class="heading"></header>
 <div id="app">
 </div>
-<script src="./js/sale_script.js"></script>
+<script src="js/sale_script.js"></script>
 <script>
     window.onscroll = function() {myFunction()};
 
