Added swagger2 and configuraions

--- a/src/main/resources/templates/export.html
+++ b/src/main/resources/templates/export.html
@@ -10,7 +10,7 @@
 <header class="zull"></header>
 <nav>
     <ul>
-        <li><a href="index.html">Sales</a></li>
+        <li><a href="dindex.html">Sales</a></li>
         <li><a href="export.html">Export</a></li>
     </ul>
 </nav>
